Added twin property changes

--- a/00-adt-experiments.ipynb
+++ b/00-adt-experiments.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
    "source": [
     "import json\n",
     "\n",
-    "def upd_twin(twin_id, twin_data):\n",
+    "def add_twin(twin_id, twin_data):\n",
     "    # Send data to the topology\n",
     "    try:\n",
     "        twin_data_dict = json.loads(twin_data)\n",
@@ -151,7 +151,7 @@
     }
    ],
    "source": [
-    "upd_twin(twin_id, twin_data)"
+    "add_twin(twin_id, twin_data)"
    ]
   },
   {
@@ -167,21 +167,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Update existed twin\n",
+    "\n",
+    "- [X] update 1 property\n",
+    "- [X] try to update non-existed twin - shows error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from typing import List\n",
+    "\n",
+    "def update_twin(twin_id:str, data:List[dict]):\n",
+    "    try:\n",
+    "        #data = json.loads(json_patch)\n",
+    "        response = client.update_digital_twin(twin_id, data)\n",
+    "        print(response)\n",
+    "        return \"SUCCESS\"\n",
+    "    except Exception as e:\n",
+    "        print(\"Error sending data to Azure Digital Twins service topology:\", str(e))\n",
+    "        return \"FAIL\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Request data from ADT"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "def query_twin() -> str:\n",
+    "def query_twin(twin_id:str) -> str:\n",
     "    client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "\n",
     "    # Define your query\n",
-    "    query = \"SELECT * FROM digitaltwins T WHERE IS_OF_MODEL(T, 'dtmi:com:example:CentralUnit;1')\"\n",
+    "    query = f'SELECT * FROM digitaltwins T WHERE T.$dtId = \\'{twin_id}\\''\n",
     "\n",
     "    # Execute the query\n",
     "    query_result = client.query_twins(query)\n",
@@ -190,11 +220,124 @@
     "    #for twin in query_result:\n",
     "    #    print(twin)\n",
     "\n",
-    "    return json.dumps(list(query_result), indent=4)\n",
+    "    return json.dumps(list(query_result), indent=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Update twin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'SUCCESS'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import json\n",
     "\n",
-    "r = query_twin()\n",
+    "# Specify the ID of the digital twin you want to update\n",
+    "digital_twin_id = \"TermoSensor_Dnepr_3\"\n",
     "\n",
-    "print(r)"
+    "# Specify the property you want to update and its new value\n",
+    "property_to_update = \"temperature\"\n",
+    "new_value = \"35\"\n",
+    "\n",
+    "# Create a dictionary with the property update\n",
+    "update = {\n",
+    "    property_to_update: new_value\n",
+    "}\n",
+    "\n",
+    "# Convert the dictionary to a JSON patch\n",
+    "props = [\n",
+    "    {\n",
+    "        \"op\": \"add\",\n",
+    "        \"path\": \"/status\",\n",
+    "        \"value\": \"on\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"op\": \"add\",\n",
+    "        \"path\": \"/temperature\",\n",
+    "        \"value\": 35\n",
+    "    },\n",
+    "]\n",
+    "\n",
+    "json_path = json.dumps(props)\n",
+    "\n",
+    "# Call the function to update the digital twin\n",
+    "update_twin(digital_twin_id, props)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "run"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\n",
+      "    {\n",
+      "        \"$dtId\": \"TermoSensor_Dnepr_3\",\n",
+      "        \"$etag\": \"W/\\\"cba48977-fc7b-4d8b-86ce-a1efe32a9d40\\\"\",\n",
+      "        \"name\": \"TermoSensor_Dnepr_3\",\n",
+      "        \"location\": \"Dnepr\",\n",
+      "        \"status\": \"on\",\n",
+      "        \"temperature\": 35,\n",
+      "        \"$metadata\": {\n",
+      "            \"$model\": \"dtmi:com:example:TermoSensor;1\",\n",
+      "            \"$lastUpdateTime\": \"2024-07-12T08:23:55.9367663Z\",\n",
+      "            \"name\": {\n",
+      "                \"lastUpdateTime\": \"2024-07-10T14:49:05.8126881Z\"\n",
+      "            },\n",
+      "            \"location\": {\n",
+      "                \"lastUpdateTime\": \"2024-07-10T14:49:05.8126881Z\"\n",
+      "            },\n",
+      "            \"status\": {\n",
+      "                \"lastUpdateTime\": \"2024-07-12T08:23:55.9367663Z\"\n",
+      "            },\n",
+      "            \"temperature\": {\n",
+      "                \"lastUpdateTime\": \"2024-07-12T08:23:55.9367663Z\"\n",
+      "            }\n",
+      "        }\n",
+      "    }\n",
+      "]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "json = query_twin(digital_twin_id)\n",
+    "\n",
+    "print(json)"
    ]
   }
  ],
