--- a/02-adt-topology-config-sk.ipynb
+++ b/02-adt-topology-config-sk.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -397,11 +397,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "request=\"Please set temperature to 21 for termosensor TermoSensor_Dnepr_2\""
+    "request=\"please find top 3 hotter termosensors\" # GOOD!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request=\"I'm lloking for location with temperature anomaly. Can you find location that I'm lloking for? By anomaly I assume temperature more than 35\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "! Interesting: for the request \n",
+    "```\n",
+    "request=\"I'm looking for any units that status is not on. Please provide me list of Id such units.\"\n",
+    "```\n",
+    "\n",
+    "LLM is not able to find right tools and provide instructions to user....\n",
+    "\n",
+    "```\n",
+    "To address your request, we need to identify all units (ControlHub and TermoSensor) whose status is not &quot;on&quot;. Here is the step-by-step plan to achieve this:\n",
+    "\n",
+    "1. Query the digitaltwins collection to get all ControlHub twins.\n",
+    "2. Query the digitaltwins collection to get all TermoSensor twins.\n",
+    "3. Filter the results from both queries to find twins where the status property is not &quot;on&quot;.\n",
+    "4. Collect the IDs of these twins and provide the list.\n",
+    "\n",
+    "Since we don't have the actual functions to perform these queries and filter operations, I will provide the final answer based on the logical steps described.\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request=\"\"\"I'm looking for any units that status is not on.\n",
+    "Please provide me list of Id such units. \n",
+    "Once you know the query you should query the service with tools available for you.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- direct control"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "request=\"Please set temperature to 18 for termosensor TermoSensor_Dnepr_1\""
    ]
   },
   {
@@ -415,11 +474,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
-    "request=\"\"\"For termosesnsors located in Odesa please set temperature 41\"\"\""
+    "request=\"\"\"For termosesnsors located in Odesa please set temperature 42 and status to on\"\"\" # GOOD"
    ]
   },
   {
@@ -445,14 +504,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The temperature for all TermoSensors connected to ControlHub in Odesa has been successfully set to 41.\n"
+      "Here is the list of units where the status is not \"on\":\n",
+      "- TermoSensor_Dnepr_3\n",
+      "- TermoSensor_Lviv_1\n",
+      "- TermoSensor_Lviv_2\n",
+      "- TermoSensor_Lviv_3\n",
+      "- TermoSensor_Lviv_4\n"
      ]
     }
    ],
