Added creation/delition twins with langgraph

--- a/00-adt-experiments.ipynb
+++ b/00-adt-experiments.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +211,8 @@
     "    client = DigitalTwinsClient(digital_twin_endpoint, credential)\n",
     "\n",
     "    # Define your query\n",
-    "    query = f'SELECT * FROM digitaltwins T WHERE T.$dtId = \\'{twin_id}\\''\n",
+    "    # query = f'SELECT * FROM digitaltwins T WHERE T.$dtId = \\'{twin_id}\\''\n",
+    "    query = \"SELECT * FROM relationships\"\n",
     "\n",
     "    # Execute the query\n",
     "    query_result = client.query_twins(query)\n",
@@ -297,44 +298,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[\n",
-      "    {\n",
-      "        \"$dtId\": \"TermoSensor_Dnepr_3\",\n",
-      "        \"$etag\": \"W/\\\"cba48977-fc7b-4d8b-86ce-a1efe32a9d40\\\"\",\n",
-      "        \"name\": \"TermoSensor_Dnepr_3\",\n",
-      "        \"location\": \"Dnepr\",\n",
-      "        \"status\": \"on\",\n",
-      "        \"temperature\": 35,\n",
-      "        \"$metadata\": {\n",
-      "            \"$model\": \"dtmi:com:example:TermoSensor;1\",\n",
-      "            \"$lastUpdateTime\": \"2024-07-12T08:23:55.9367663Z\",\n",
-      "            \"name\": {\n",
-      "                \"lastUpdateTime\": \"2024-07-10T14:49:05.8126881Z\"\n",
-      "            },\n",
-      "            \"location\": {\n",
-      "                \"lastUpdateTime\": \"2024-07-10T14:49:05.8126881Z\"\n",
-      "            },\n",
-      "            \"status\": {\n",
-      "                \"lastUpdateTime\": \"2024-07-12T08:23:55.9367663Z\"\n",
-      "            },\n",
-      "            \"temperature\": {\n",
-      "                \"lastUpdateTime\": \"2024-07-12T08:23:55.9367663Z\"\n",
-      "            }\n",
-      "        }\n",
-      "    }\n",
-      "]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "\n",
+    "digital_twin_id=1\n",
     "json = query_twin(digital_twin_id)\n",
     "\n",
     "print(json)"
