--- a/02-adt-topology-config-sk.ipynb
+++ b/02-adt-topology-config-sk.ipynb
@@ -116,8 +116,7 @@
     "\n",
     "- `get_module_definition` - defines modules and rules of handling digital twins. It's implementation of RAG architecture where user's input _augmented_ with details of the model that needs to be maintained.\n",
     "- `query_service` - requests information about _digital twin_ from Azure Digital Twins Query API.\n",
-    "- `update_twin`, `delete_twin` - creates or deletes _digital twin_.\n",
-    "- `update_relationship`, `delete_relationship` - creates or deletes _relationship_ between digital twins.\n"
+    "- `update_twin` - updates properties for _digital twin_.\n"
    ]
   },
   {
