--- a/01-adt-create-twins-lg.ipynb
+++ b/01-adt-create-twins-lg.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
     "\n",
     "# Load environment variables from .env file\n",
     "load_dotenv()\n",
-    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"true\"\n",
+    "os.environ[\"LANGCHAIN_TRACING_V2\"] = \"false\"\n",
     "os.environ[\"LANGCHAIN_PROJECT\"] = f\"DigTwin\"\n",
     "os.environ[\"LANGCHAIN_ENDPOINT\"] = \"https://api.smith.langchain.com\"\n",
     "\n",
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,8 @@
     "def delete_relationship(twin_id, relation_id)->str:\n",
     "    \"\"\"\n",
     "        Delete the relationship between twins in Azure Digital Twins Service.\n",
-    "        This function should be used when you want to delete relationship between twins.\n",
+    "\n",
+    "        return: SUCCESS if the operation was successful, otherwise FAIL with description of the error, you're welcome to analyse error and fix it.\n",
     "    \"\"\"\n",
     "    \n",
     "    # Send data to the topology\n",
@@ -301,7 +302,7 @@
     "        return \"SUCCESS\\n\"\n",
     "    except Exception as e:\n",
     "        print(\"Error deleting relationship in Azure Digital Twins service topology:\", str(e))\n",
-    "        return \"FAIL\\n\"\n",
+    "        return f'FAIL: + {str(e)}\\n'\n",
     "\n",
     "class QueryTwinInput(BaseModel):\n",
     "    query: str = Field(description=\n",
@@ -352,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,8 +362,7 @@
     "model = AzureChatOpenAI(\n",
     "    openai_api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"], # 2024-02-15-preview\n",
     "    azure_deployment=os.environ[\"AZURE_OPENAI_DEPLOYMENT_NAME\"], # gpt-4o\n",
-    "    temperature=0.1,\n",
-    "    # streaming=False\n",
+    "    temperature=0.1\n",
     ")\n"
    ]
   },
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -385,8 +385,7 @@
     "        if isinstance(message, tuple):\n",
     "            print(message)\n",
     "        else:\n",
-    "            message.pretty_print()\n",
-    "\n"
+    "            message.pretty_print()\n"
    ]
   },
   {
@@ -398,12 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from langchain_core.messages import HumanMessage, SystemMessage, AIMessage\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
     "system_message = SystemMessage(\n",
     "    content=\"\"\"\n",
@@ -450,8 +448,7 @@
    "source": [
     "### Execution\n",
     "\n",
-    "Is used ReAct approach that let LLM to think what steps should be done to achieve task and what tool is better fit this needs.\n",
-    "Several agent were cinsidered from [available](https://python.langchain.com/v0.1/docs/modules/agents/agent_types/)"
+    "Is used ReAct approach that let LLM to think what steps should be done to achieve task and what tool is better fit this needs."
    ]
   },
   {
@@ -525,27 +522,41 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Batch Task"
+    "#### Batch Task\n",
+    "\n",
+    "- add twins"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "human_message = HumanMessage(\n",
     "    content=\"\"\"I want to add new location that contains 5 sensors. Status for all of them on. \n",
-    "    They should be conected to ControlHub that is located in Niko give the hub id meaningful value that reflects its location.\n",
+    "    They should be conected to ControlHub that is located in Odesa give the hub id meaningful value that reflects its location.\n",
     "    Location of sensor is the same as hub. Set temperature to each sensor as 39.\n",
     "    Do not forget to connect ControlHub to CentralUnit\"\"\"\n",
-    ")\n",
-    "\n",
-    "# Remove all\n",
-    "# human_message = HumanMessage(\n",
-    "#     content=\"Please remove ControlHubs located in Zhitomyr and all TermoSensors that connected to this hub. Do not remove other ThermoSensors!\"\n",
-    "# )\n",
-    "\n"
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- remove twins"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "human_message = HumanMessage(\n",
+    "    content=\"Please clean toplogy, remove all control hubs and termo sensors.\"\n",
+    ")"
    ]
   },
   {
@@ -559,109 +570,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "================================\u001b[1m Human Message \u001b[0m=================================\n",
-      "\n",
-      "Yes, Hub_3 is the correct twin ID.\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "Tool Calls:\n",
-      "  delete-twin-tool (call_188YMSAUrXP8jUHAK93RwuPW)\n",
-      " Call ID: call_188YMSAUrXP8jUHAK93RwuPW\n",
-      "  Args:\n",
-      "    twin_id: Hub_3\n",
-      "Error deleting digital twin in Azure Digital Twins service topology: (RelationshipsNotDeleted) Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "Code: RelationshipsNotDeleted\n",
-      "Message: Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: delete-twin-tool\n",
-      "\n",
-      "FAIL: + (RelationshipsNotDeleted) Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "Code: RelationshipsNotDeleted\n",
-      "Message: Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "The ControlHub `Hub_3` has active relationships that need to be deleted before the twin itself can be deleted. I will first retrieve the active relationships for `Hub_3` and then proceed to delete them.\n",
-      "\n",
-      "Let's start by querying the relationships for `Hub_3`.\n",
-      "Tool Calls:\n",
-      "  query-service (call_188YMSAUrXP8jUHAK93RwuPW)\n",
-      " Call ID: call_188YMSAUrXP8jUHAK93RwuPW\n",
-      "  Args:\n",
-      "    query: SELECT * FROM relationships WHERE $sourceId = 'Hub_3'\n",
-      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: query-service\n",
-      "\n",
-      "[]\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "It appears that there are no active relationships for `Hub_3`. This might be an inconsistency. Let's try to delete the twin again.\n",
-      "Tool Calls:\n",
-      "  delete-twin-tool (call_188YMSAUrXP8jUHAK93RwuPW)\n",
-      " Call ID: call_188YMSAUrXP8jUHAK93RwuPW\n",
-      "  Args:\n",
-      "    twin_id: Hub_3\n",
-      "Error deleting digital twin in Azure Digital Twins service topology: (RelationshipsNotDeleted) Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "Code: RelationshipsNotDeleted\n",
-      "Message: Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: delete-twin-tool\n",
-      "\n",
-      "FAIL: + (RelationshipsNotDeleted) Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "Code: RelationshipsNotDeleted\n",
-      "Message: Twin Hub_3 has active relationships. Cannot delete a twin unless all the relationships are deleted. Please ensure that the active relationships on the twin are deleted. See section on retrieving relationships https://aka.ms/adtv2twins.\n",
-      "\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "It seems there are still active relationships associated with `Hub_3` that need to be deleted. Let's query the relationships where `Hub_3` is the target to ensure we capture all relationships.\n",
-      "Tool Calls:\n",
-      "  query-service (call_188YMSAUrXP8jUHAK93RwuPW)\n",
-      " Call ID: call_188YMSAUrXP8jUHAK93RwuPW\n",
-      "  Args:\n",
-      "    query: SELECT * FROM relationships WHERE $targetId = 'Hub_3'\n",
-      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: query-service\n",
-      "\n",
-      "[{\"$relationshipId\": \"connection_Hub_3\", \"$sourceId\": \"CentralUnit\", \"$targetId\": \"Hub_3\", \"$relationshipName\": \"connects\", \"$etag\": \"W/\\\"52e02865-e506-4046-9511-86f7d6dd4467\\\"\"}]\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "There is an active relationship where `CentralUnit` is connected to `Hub_3`. I will delete this relationship first.\n",
-      "Tool Calls:\n",
-      "  delete-relationship-tool (call_188YMSAUrXP8jUHAK93RwuPW)\n",
-      " Call ID: call_188YMSAUrXP8jUHAK93RwuPW\n",
-      "  Args:\n",
-      "    twin_id: CentralUnit\n",
-      "    relation_id: connection_Hub_3\n",
-      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: delete-relationship-tool\n",
-      "\n",
-      "SUCCESS\n",
-      "\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "The relationship between `CentralUnit` and `Hub_3` has been successfully deleted. Now, I will proceed to delete the `Hub_3` twin.\n",
-      "Tool Calls:\n",
-      "  delete-twin-tool (call_JfXvkeCbTDq0GXAGCvsIrSWP)\n",
-      " Call ID: call_JfXvkeCbTDq0GXAGCvsIrSWP\n",
-      "  Args:\n",
-      "    twin_id: Hub_3\n",
-      "=================================\u001b[1m Tool Message \u001b[0m=================================\n",
-      "Name: delete-twin-tool\n",
-      "\n",
-      "SUCCESS\n",
-      "\n",
-      "==================================\u001b[1m Ai Message \u001b[0m==================================\n",
-      "\n",
-      "The ControlHub `Hub_3` has been successfully deleted. If you need any further assistance, please let me know!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from langgraph.prebuilt import create_react_agent\n",
     "from langchain_community.adapters.openai import convert_message_to_dict\n",
