--- a/02-adt-topology-config-sk.ipynb
+++ b/02-adt-topology-config-sk.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,12 +353,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "request = \"How many TermoSensor do we have in out topology?\"\n",
-    "request = \"How many TermoSensors connected to Hub_3?\""
+    "request = \"How many TermoSensor do we have in out topology?\""
    ]
   },
   {
@@ -370,15 +369,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "request=\"Please create Control Hub with following parameters: name: Hub_SK, Location: Kernel, Status: on.\""
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -387,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,11 +463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "request=\"\"\"For termosesnsors located in Odesa please set temperature 42 and status to on\"\"\" # GOOD"
+    "request=\"\"\"For termosesnsors located in Lviv please set temperature 42 and status to on\"\"\" # GOOD"
    ]
   },
   {
@@ -503,19 +493,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Here is the list of units where the status is not \"on\":\n",
-      "- TermoSensor_Dnepr_3\n",
-      "- TermoSensor_Lviv_1\n",
-      "- TermoSensor_Lviv_2\n",
-      "- TermoSensor_Lviv_3\n",
-      "- TermoSensor_Lviv_4\n"
+      "The locations with temperature anomalies (temperature more than 35) are Lviv and Odesa.\n"
      ]
     }
    ],
